--- a/people.html
+++ b/people.html
@@ -245,6 +245,20 @@
       </div>
    </div>
    <hr>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu"/>
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+         <p><i>MPhil Student</i></p>
+         <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+         <p><b>Email:</b> <a href="mailto:​kliubc@connect.ust.hk">​kliubc@connect.ust.hk</a></p>
+         <p><b><a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="https://orcid.org/0009-0008-1548-4040​">ORCID ID</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></b></p>
+      </div>
+   </div>
+   <hr>
 </section>
 
 <section id="alumni">
