--- a/people.html
+++ b/people.html
@@ -286,6 +286,18 @@
    <hr>
 </section>
 
+<section id="Opportunity">
+   <div class="page-header">
+      <h3>Opportunity</h3>
+   </div>
+   <div class="row-fluid">
+      <div class="span9 offset">
+         <p>If you’re interested in joining our research team as an RA or Post-doc, please send your CV, together with writing samples or research proposal, to the P.I. at hmzqin@ust.hk . We will NOT respond to your email if you don't attach writing samples or proposals.  </p>
+         <p>1. Priority of opportunity will be given to those with a strong background in psycholinguistics or who work on memory consolidation and/or aging in tone learning. </p>
+         <p>2. We are NOT interested in applicants whose research is language pedagogy-oriented.</p>
+      </div>
+   </div>
+</section>
 
 
 
