--- a/people.html
+++ b/people.html
@@ -292,7 +292,7 @@
    </div>
    <div class="row-fluid">
       <div class="span9 offset">
-         <p>If you’re interested in joining our research team as an RA or Post-doc, please send your CV, together with writing samples or research proposal, to the P.I. at hmzqin@ust.hk . We will NOT respond to your email if you don't attach writing samples or proposals.  </p>
+         <p>If you’re interested in joining our research team as an <strong>RA</strong> or <strong>Post-doc</strong>, please send your CV, together with writing samples or research proposal, to the P.I. at <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a>. We will NOT respond to your email if you don't attach writing samples or proposals.  </p>
          <p>1. Priority of opportunity will be given to those with a strong background in psycholinguistics or who work on memory consolidation and/or aging in tone learning. </p>
          <p>2. We are NOT interested in applicants whose research is language pedagogy-oriented.</p>
       </div>
