--- a/people.html
+++ b/people.html
@@ -288,16 +288,17 @@
 
 <section id="Opportunity">
    <div class="page-header">
-      <h3>Opportunity</h3>
+      <h3 style="text-align: center;">Opportunity</h3> <!-- Center the header -->
    </div>
    <div class="row-fluid">
-      <div class="span9 offset">
+      <div class="span9 offset1" style="text-align: center; margin: 0 auto;"> <!-- Center the content -->
          <p>If you’re interested in joining our research team as an <strong>RA</strong> or <strong>Post-doc</strong>, please send your CV, together with writing samples or research proposal, to the P.I. at <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a>. We will NOT respond to your email if you don't attach writing samples or proposals.  </p>
-         <p>1. Priority of opportunity will be given to those with a strong background in psycholinguistics or who work on memory consolidation and/or aging in tone learning. </p>
+         <p>1. Priority of opportunity will be given to those with a strong background in psycholinguistics or who work on memory consolidation and/or aging in tone learning.</p>
          <p>2. We are NOT interested in applicants whose research is language pedagogy-oriented.</p>
       </div>
    </div>
 </section>
+
 
 
 
