--- a/people.html
+++ b/people.html
@@ -291,13 +291,14 @@
       <h3>Opportunity</h3> <!-- Center the header -->
    </div>
    <div class="row-fluid" style="display: flex; justify-content: center;">
-      <div class="span9 offset1" style="text-align: center; max-width: 800px; margin: 0 auto;"> <!-- Center the content with max-width -->
+      <div class="span9 offset1" style="text-align: left; max-width: 800px; margin: 0 auto;"> <!-- Left-align content with max-width and centered container -->
          <p>If you’re interested in joining our research team as an <strong>RA</strong> or <strong>Post-doc</strong>, please send your CV, together with writing samples or research proposal, to the P.I. at <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a>. We will NOT respond to your email if you don't attach writing samples or proposals.</p>
          <p>1. Priority of opportunity will be given to those with a strong background in psycholinguistics or who work on memory consolidation and/or aging in tone learning.</p>
          <p>2. We are NOT interested in applicants whose research is language pedagogy-oriented.</p>
       </div>
    </div>
 </section>
+
 
 
 
