--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                           <p>
                               It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches, our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs. deSERT) are processed by adult second-language learners who speak different languages as L1.
                           </p>
+                          <p>
+                              Mandarin-speaking Students Wanted —> 
+                              <a href="" target="_blank">Stress Training Project</a>
+                           </p>
                       </div>
                       <div class="image-content">
                           <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img theme-img">
@@ -245,6 +249,10 @@
                           <p>
                               Our research is concerned with the well-being of the aging population. Older adults are facing the challenges of age-related dysfunction in language learning and cognition (e.g., memory and attention). Indeed, recent projects have aimed at investigating older adults’ decline in lexical tone learning and the possible relationship with cognitive ability. We also attempt to find evidence that multilingual language experiences (including learning a new language) can mitigate cognitive decline and promote healthy aging.
                           </p>
+                         <p>
+                              Cantonese-speaking Older Adults Wanted —> 
+                              <a href="files/Older adult poster.pdf" target="_blank">FADL Project</a>
+                         </p>
                       </div>
                       <div class="image-content">
                           <img src="files/Theme3.PNG" alt="Illustration" class="responsive-img theme-img">
