--- a/people.html
+++ b/people.html
@@ -217,7 +217,7 @@
 
 <section id="student">
    <div class="page-header">
-      <h3>Research Student</h3>
+      <h3>Research Students</h3>
    </div>
    <div class="row-fluid">
       <div class="span3">
