--- a/publications.html
+++ b/publications.html
@@ -98,12 +98,10 @@
                
                <section id="articles">
                   <div class="page-header">
-                     <h3>Peer-reviewed journal articles</h3>
-		     <p>(# = corresponding author, * = co-first author, ^ = student trainees)</p>
+                     <h3>Journal Articles</h3>
                   </div>
-2023
                     <ol>			    
-<li class="publication">Zhu, J., Shao, J., Zhang, C.<sup>#</sup>, Chen, F.<sup>#</sup>, & Wiener, S. (2023). Statistical information affects spoken word recognition of tone languages in stutterers: Evidence from an auditory-perceptual gating study. <i>Journal of Speech, Language, and Hearing Research, 66</i>(9), 3382–3398. <a href="https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00123">Link</a></li>
+<li class="publication">Qin. Z., Lee-Kim, S-I. & Qi, H. (in press).  The effect of second-language learning experience on Korean listeners’ use of pitch cues in the perception of Cantonese tones. Second Language Research.</i>(9), 3382–3398. <a href="https://doi.org/10.1177/02676583241244604">Link</a> [<a href="https://drive.google.com/file/d/1ZPt5FR9MvQVQM0GYkVkuy6fXWV8vG4OH/view">PDF</a>, open access]</li>
 <li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., & Wiener, S. (2023). Tone deafness in music does not preclude distributional learning of nonnative tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66</i>(7), 2461–2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
 <li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C., Shao, J., & Wiener, S. (2023). Distributional learning of musical pitch despite tone-deafness in individuals with congenital amusia. <i>Journal of the Acoustical Society of America, 153</i>(5), 3117. <a href="https://doi.org/10.1121/10.0019472">Link</a></li>
 		    </ol>
