--- a/facilities.html
+++ b/facilities.html
@@ -98,7 +98,7 @@
                
                <section id="external">
                   <div class="page-header">
-                     <h3>External grants</h3>
+                     <h3>Facilities</h3>
                   </div>
 
 <h5>The effects of auditory cueing during sleep on generalized phonetic learning: The case of non-native lexical tone learning</h5>
