--- a/facilities.html
+++ b/facilities.html
@@ -93,6 +93,63 @@
             </div>
         </div>
          <hr>
+		<meta charset="UTF-8">
+             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+             <title>Responsive Images</title>
+             <style>
+                 .img-1 {
+                     max-width: 50%;
+                     height: auto;
+                     display: block;
+                     margin: 0 auto;
+                 }
+                 .text-1 {
+                     text-align: center;
+                 .img-2 {
+                     max-width: 50%;
+                     height: auto;
+                     display: block;
+                     margin: 0 auto;
+                 }
+                .text-2 {
+                     text-align: center;
+                 }
+		.img-3 {
+                     max-width: 50%;
+                     height: auto;
+                     display: block;
+                     margin: 0 auto;
+                 }
+                .text-3 {
+                     text-align: center;
+                 }
+             </style>
+        <div class="row-fluid">
+            <div class="span12">
+               <div class="img-container">
+                 <div style="display: flex; justify-content: space-between;">
+                    <div style="flex: 1;">
+                        <img src="files/F1.png" class="img-1" alt="Facility 1">
+                        <div class="text-1">
+                           <p>Main testing station<p>
+                        </div>
+                    </div>
+                    <div style="flex: 2;">
+                        <img src="files/F2.jpg" class="img-2" alt="Facility 2">
+		        <div class="text-2">
+                           <p>EEG Station<p>
+                        </div>
+                    </div>
+		    <div style="flex: 3;">
+                        <img src="files/F3.jpg" class="img-3" alt="Facility 3">
+		        <div class="text-3">
+                           <p>Eye-tracking room<p>
+                        </div>
+                    </div>
+                   </div>  
+               </div>
+            </div>
+         </div>
          <div class="row-fluid">
             <div class="span12">
                
