--- a/facilities.html
+++ b/facilities.html
@@ -129,19 +129,19 @@
                <div class="img-container">
                  <div style="display: flex; justify-content: space-between;">
                     <div style="flex: 1;">
-                        <img src="files/F1.png" class="img-1" alt="Facility 1">
+                        <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
                            <p>Main testing station<p>
                         </div>
                     </div>
                     <div style="flex: 2;">
-                        <img src="files/F2.jpg" class="img-2" alt="Facility 2">
+                        <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
                            <p>EEG Station<p>
                         </div>
                     </div>
 		    <div style="flex: 3;">
-                        <img src="files/F3.jpg" class="img-3" alt="Facility 3">
+                        <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
                            <p>Eye-tracking room<p>
                         </div>
