--- a/publications.html
+++ b/publications.html
@@ -120,8 +120,8 @@
                      <h3>Conference Papers</h3>
                   </div>
                     <ol>
-<li class="publication">Qin. Z., Lee-Kim, S-I. & Qi, H. (in press). The effect of second-language learning experience on Korean listeners’ use of pitch cues in the perception of Cantonese tones. Second Language Research. [<a href="https://drive.google.com/file/d/1c6VdXpZ9zN8cwSqaeLmRFZy_H-HI7yE6/view">PDF</a>, open access]</li>
-<li class="publication">Qin, Z. & Zhang, J. W. (in press). The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study. Linguistics Vanguard. [<a href="https://drive.google.com/file/d/1eV6psrNlU3LY3W0fzjBGW1JKZ6Wuea2s/view">PDF</a>, open access]</li>		    </ol>     
+<li class="publication">Chui, Y. & Qin, Z. (2023). Distributional learning and overnight consolidation of a difficult non-native tone contrast. In Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023), 2557-2561. Prague, Czech. [<a href="https://drive.google.com/file/d/1c6VdXpZ9zN8cwSqaeLmRFZy_H-HI7yE6/view">PDF</a>, open access]</li>
+<li class="publication">Qin, Z., Jin, R., & Wu, R. (2023). The role of prior knowledge in second-language learners' overnight consolidation of Cantonese tones. In Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023), 1881-1885. Prague, Czech. [<a href="https://drive.google.com/file/d/1eV6psrNlU3LY3W0fzjBGW1JKZ6Wuea2s/view">PDF</a>, open access]</li>		    </ol>     
 
 		       
 		    <hr>
