--- a/facilities.html
+++ b/facilities.html
@@ -92,7 +92,10 @@
                 </div>
             </div>
         </div>
-         <hr>
+	 <section id="Facilities">
+                  <div class="page-header">
+                     <h3>Facilities</h3>
+                  </div>
 		<meta charset="UTF-8">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <title>Responsive Images</title>
@@ -153,10 +156,7 @@
          <div class="row-fluid">
             <div class="span12">
                
-               <section id="external">
-                  <div class="page-header">
-                     <h3>Facilities</h3>
-                  </div>
+              
 
 <h5>The effects of auditory cueing during sleep on generalized phonetic learning: The case of non-native lexical tone learning</h5>
 	<ol>
