--- a/facilities.html
+++ b/facilities.html
@@ -142,14 +142,14 @@
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
                            <p>EEG Station
-				▪ Neuroscan EEG system (64CH)<p>
+				<br>▪ Neuroscan EEG system (64CH)<p>
                         </div>
                     </div>
 		    <div style="flex: 3;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
                            <p>Eye-tracking room
-				▪ Eyelink Portable Duo (Rm 3302)<p>
+				<br>▪ Eyelink Portable Duo (Rm 3302)<p>
                         </div>
                     </div>
                    </div>  
@@ -170,10 +170,19 @@
 		</style>
 		</head>
 		<body>
+			<br>
 		    <div class="centered-text">
-		        <p>Clicke to book (For internal use)</p>
+		        <p>Click to book (For internal use)</p>
+			    <br>
+			    <br>
 		    </div>
 	  </body>
+
+	<hr>
+	 <section id="Facilities">
+                  <div class="page-header">
+                     <h3>Facilities</h3>
+                  </div>
 		    
 	</ol>	       
 		       
