--- a/facilities.html
+++ b/facilities.html
@@ -172,7 +172,7 @@
 		<body>
 			<br>
 		    <div class="centered-text">
-		        <p>Click to book (For internal use)</p>
+		        <p><a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank">Click to book</a> (For internal use)</p>
 			    <br>
 			    <br>
 		    </div>
@@ -183,15 +183,28 @@
                   <div class="page-header">
                      <h3>Facilities</h3>
                   </div>
-		    
-	</ol>	       
-		       
-<hr>
-
-              </section>
-            </div>
-         </div>
-      </div>
+  
+		<style>
+		    .container {
+		        display: flex; /* 使用 Flexbox 布局 */
+		    }
+ 		   .text-box {
+ 		       flex: 1; /* 让文本框平均占据可用空间 */
+   		     margin-right: 10px; /* 设置文本框之间的间距 */
+     		 	  padding: 10px; /* 设置内边距 */
+  		      border: 1px solid #ccc; /* 添加边框 */
+		    }
+		</style>
+		</head>
+		<body>
+ 		   <div class="container">
+ 		       <div class="text-box">
+   		         <p>Hardware</p>
+   		     </div>
+    		    <div class="text-box">
+   		         <p>Software</p>
+   		     </div>
+  		  </div>		       
 
 
       <!-- Le javascript
