--- a/facilities.html
+++ b/facilities.html
@@ -178,7 +178,9 @@
 			    <br>
 		    </div>
 	  </body>
-	       
+</html>
+             <div class="span10 section">
+                  <h4>News and Events</h4>	       
   
 
 	</ol>	       
