--- a/facilities.html
+++ b/facilities.html
@@ -187,7 +187,33 @@
             </div>
          </div>
       </div>
-	
+	   
+	<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Side-by-Side Text Boxes</title>		
+		<style>
+		    .container {
+		        display: flex; /* 使用 Flexbox 布局 */
+		    }
+ 		   .text-box {
+ 		       flex: 1; /* 让文本框平均占据可用空间 */
+   		     margin-right: 10px; /* 设置文本框之间的间距 */
+     		 	  padding: 10px; /* 设置内边距 */
+		    }
+		</style>
+		</head>
+		<body>
+ 		   <div class="container">
+ 		       <div class="text-box">
+   		         <p>Hardware</p>
+   		     </div>
+    		    <div class="text-box">
+   		         <p>Software</p>
+   		     </div>
+  		  </div>		
+
+	   
 
       <!-- Le javascript
          ================================================== -->
