--- a/facilities.html
+++ b/facilities.html
@@ -187,7 +187,9 @@
             </div>
          </div>
       </div>
-	   
+</div>	 
+</div>
+</div>
 	<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -206,10 +208,10 @@
 		<body>
  		   <div class="container">
  		       <div class="text-box">
-   		         <p>Hardware</p>
+   		         <h3>Hardware<h3>
    		     </div>
     		    <div class="text-box">
-   		         <p>Software</p>
+   		         <h3>Software<h3>
    		     </div>
   		  </div>		
 
