--- a/facilities.html
+++ b/facilities.html
@@ -195,10 +195,10 @@
 		<body>
  		   <div class="container">
  		       <div class="text-box">
-   		         <h3>Hardware<h3>
+   		         <h3>Hardware</h3>
    		     </div>
     		    <div class="text-box">
-   		         <h3>Software<h3>
+   		         <h3>Software</h3>
    		     </div>
   		  </div>		
 		</body>
