--- a/facilities.html
+++ b/facilities.html
@@ -190,7 +190,16 @@
 </div>	 
 </div>
 </div>
-
+	<style>
+		    .container {
+		        display: flex; /* 使用 Flexbox 布局 */
+		    }
+ 		   .text-box {
+ 		       flex: 1; /* 让文本框平均占据可用空间 */
+   		     margin-right: 10px; /* 设置文本框之间的间距 */
+     		 	  padding: 10px; /* 设置内边距 */
+		    }
+	</style>
 		</head>
 		<body>
  		   <div class="container">
