--- a/facilities.html
+++ b/facilities.html
@@ -177,6 +177,11 @@
 			    <br>
 			    <br>
 		    </div>
+		    <div class="centered-text">
+		        <h3>Hardware                                  Software</h3>
+			    <br>
+			    <br>
+		    </div>
 	       </body>
 <hr>
 		
