--- a/facilities.html
+++ b/facilities.html
@@ -105,7 +105,7 @@
                      max-width: 100%;
                      height: auto;
                      display: block;
-                     margin: 0 auto;
+		     margin-right: 20px;
                  }
                  .text-1 {
                      text-align: center;
@@ -113,7 +113,7 @@
                      max-width: 100%;
                      height: auto;
                      display: block;
-                     margin: 0 auto;
+                     margin-right: 20px;
                  }
                 .text-2 {
                      text-align: center;
