--- a/facilities.html
+++ b/facilities.html
@@ -130,7 +130,7 @@
              </style>
         <div class="row-fluid">
             <div class="span12">
-               <div class="img-container">
+               <div class="img-1">
                  <div style="display: flex; justify-content: space-between;">
                     <div style="flex: 1;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
@@ -178,7 +178,7 @@
 			    <br>
 		    </div>
 		    <div class="centered-text">
-		        <h3>Hardware                                  Software</h3>
+		        <h3>Hardware &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Software</h3>
 			    <br>
 			    <br>
 		    </div>
