--- a/facilities.html
+++ b/facilities.html
@@ -127,6 +127,10 @@
                 .text-3 {
                      text-align: center;
                  }
+		.centered-text {
+    	        display: flex;
+   	        justify-content: space-between;
+  		  }
              </style>
         <div class="row-fluid">
             <div class="span12">
@@ -178,7 +182,13 @@
 			    <br>
 		    </div>
 		    <div class="centered-text">
-		        <h3>Hardware &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Software</h3>
+		        <h3>Hardware</h3>
+			<h3>Software</h3>
+			    <br>
+			    <br>
+		    </div>
+		    <div class="centered-text">
+		        <h3>Hardware</h3>
 			    <br>
 			    <br>
 		    </div>
