--- a/facilities.html
+++ b/facilities.html
@@ -166,9 +166,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Centered Text</title>
 		<style>
- 		   .centered-text {
+ 		   .divide-text {
  	            display: flex;
    	            justify-content: space-between;
+		    }
+		   .centered-text {
+ 	            text-align: center; 
 		    }
 		</style>
 		</head>
@@ -179,13 +182,13 @@
 			    <br>
 			    <br>
 		    </div>
-		    <div class="centered-text">
+		    <div class="divide-text">
 		        <h3>Hardware</h3>
 			<h3>Software</h3>
 			    <br>
 			    <br>
 		    </div>
-		    <div class="centered-text">
+		    <div class="divide-text">
 		        <h3>Hardware</h3>
 			    <br>
 			    <br>
