--- a/facilities.html
+++ b/facilities.html
@@ -189,7 +189,9 @@
 			    <br>
 		    </div>
 		    <div class="divide-text">
-		        <h3>Hardware</h3>
+		         <p>▪ 4 <a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a></p>
+			 <p>​​▪ Presentation: E-Prime 3.0, Paradigm, PsychoPy​, Matlab</p>
+	
 			    <br>
 			    <br>
 		    </div>
