--- a/facilities.html
+++ b/facilities.html
@@ -191,8 +191,9 @@
 		    <div class="divide-text">
 		         <p>▪ 4 <a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a></p>
 			 <p>​​▪ Presentation: E-Prime 3.0, Paradigm, PsychoPy​, Matlab</p>
-	
 			    <br>
+			 <p>▪ 2 testing desktop computers</p>
+			 <p>▪ Data analysis: SPSS, R, Matlab, Python</p>
 			    <br>
 		    </div>
 	       </body>
