--- a/facilities.html
+++ b/facilities.html
@@ -173,6 +173,12 @@
 		   .centered-text {
  	            text-align: center; 
 		    }
+		   .divide-box {
+ 		       flex: 1; /* 让文本框平均占据可用空间 */
+   		     margin-right: 10px; /* 设置文本框之间的间距 */
+     		 	  padding: 10px; /* 设置内边距 */
+		    }
+
 		</style>
 		</head>
 		<body>
@@ -196,6 +202,12 @@
 			 <p><br>▪ Data analysis: SPSS, R, Matlab, Python</p>
 			    <br>
 		    </div>
+		    <div class="divide-box">
+   		         <h3>Hardwar</h3>
+   		     </div>
+    		    <div class="divide-box">
+   		         <h3>Softwar</h3>
+   		     </div>
 	       </body>
 <hr>
 		
