--- a/facilities.html
+++ b/facilities.html
@@ -178,6 +178,14 @@
    		     margin-right: 10px; /* 设置文本框之间的间距 */
      		 	  padding: 10px; /* 设置内边距 */
 		    }
+		  .parallel-text {
+     		   display: flex;
+   	           justify-content: space-between;
+   		   }
+ 		   .parallel-text p {
+     		   width: 45%; /* 调整宽度以适应布局需求 */
+   	           text-align: justify;
+  		   }
 
 		</style>
 		</head>
@@ -203,11 +211,15 @@
 			    <br>
 		    </div>
 		    <div class="divide-box">
-   		         <h3>Hardwar</h3>
+   		         <p>Hardwar</p>
    		     </div>
     		    <div class="divide-box">
-   		         <h3>Softwar</h3>
+   		         <p>Softwar</p>
    		     </div>
+		    <div class="parallel-text">
+    <p>第一段文字：Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus nec mi accumsan, sit amet consequat justo mattis.</p>
+    <p>第二段文字：Phasellus ultricies, dolor et dictum fermentum, ligula mauris tempor tortor, nec pulvinar urna lacus nec nulla. Duis nec ligula a velit faucibus ultrices.</p>
+</div>
 	       </body>
 <hr>
 		
