--- a/facilities.html
+++ b/facilities.html
@@ -202,24 +202,21 @@
 			    <br>
 			    <br>
 		    </div>
-		    <div class="divide-text">
-		         <p>▪ 4 <a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a></p>
-			 <p>​​<br>▪ Presentation: E-Prime 3.0, Paradigm, PsychoPy​, Matlab</p>
-			    
-			 <p>▪ 2 testing desktop computers</p>
-			 <p><br>▪ Data analysis: SPSS, R, Matlab, Python</p>
-			    <br>
-		    </div>
-		    <div class="divide-box">
-   		         <p>Hardwar</p>
-   		     </div>
-    		    <div class="divide-box">
-   		         <p>Softwar</p>
-   		     </div>
 		    <div class="parallel-text">
-    <p>第一段文字：Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus nec mi accumsan, sit amet consequat justo mattis.</p>
-    <p>第二段文字：Phasellus ultricies, dolor et dictum fermentum, ligula mauris tempor tortor, nec pulvinar urna lacus nec nulla. Duis nec ligula a velit faucibus ultrices.</p>
-</div>
+  			  <p>▪ 4 <a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a>
+<br>▪ 2 testing desktop computers
+<br>▪ 2 work/data analysis computers
+<br>▪ 1 Neuroscan EEG system (64CH)
+<br>▪ 1 EyeLink Portable Duo (Rm 3302) 
+<br>▪ 1 Clinical Audiometer (GSI 18 model of Grason-Stadler)
+<br>▪ 1 Tascam DR-44WL Handheld Recorder with Wi-Fi
+<br>▪ 1 laptop computer
+<br>▪ 1 computer projector</p>
+ 		          <p>▪ Presentation: E-Prime 3.0, Paradigm, PsychoPy​, Matlab
+<br>▪ Data analysis: SPSS, R, Matlab, Python
+<br>▪ Speech: Praat
+<br>▪ General: Google drive, Microsoft Office</p>
+		    </div>
 	       </body>
 <hr>
 		
