--- a/media.html
+++ b/media.html
@@ -105,8 +105,15 @@
   	 	  <div class="span12">
    		   <h3>Collaborators</h3>
  		 </div>
+
+		<div class="row-fluid">
+  	 	  <div class="span12">
+   		   <h3>Collaborative labs & centers</h3>
+ 		 </div>
+			
 		 <hr>
               </section>
+		<hr>
 		    
                <section id="mediacoverage">
          	 <div class="page-header">
