--- a/media.html
+++ b/media.html
@@ -94,22 +94,22 @@
         </div>
          <hr>
 	      
-		<div class="row-fluid">
-		  <div class="span12">
-		    <section id="mediacoverage">
-		      <!-- Section Header -->
-		      <div class="page-header">
-		        <h4>Collaboration and Outreach</h4>
-		      </div>
+	<div class="row-fluid">
+	  <div class="span12">
+	    <section id="mediacoverage">
+	      <!-- Section Header -->
+	      <div class="page-header">
+		<h4>Collaboration and Outreach</h4>
+	      </div>
 		
 		<div class="row-fluid">
 		  <div class="span12">
-		    <h3>Collaborators</h3>
+		    <h4>Collaborators</h4>
 				  
 			</div>
 		<div class="row-fluid">
 		  <div class="span12">
-		    <h3><em>On Second-language learning of speech prosody</em></h3>
+		    <h3>On Second-language learning of speech prosody</h3>
 		  <ul>
 		    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea <a href="https://sites.google.com/site/sangimleekim/">[Link]</a></li>
 		    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. <a href="https://www.annietremblay.com/">[Link]</a></li>
