--- a/media.html
+++ b/media.html
@@ -103,15 +103,18 @@
           	   <h4>Collaboration and Outreach</h4>
          	 </div>
 		       
-		<div class="row-fluid">
-  	 	  <div class="span3">
-   		   <img src="files/media_202306_UBSN.png" alt="media_202306_UBSN" />
-  		  </div>
-   		 <div class="span9">
-   		   <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a></h4>
-    		  <i>UBSN Newsletter, PolyU</i>
-    		 </div>
- 		 </div>
+		   <h3>Journal Articles</h3>
+		  <ol> 
+		    <li class="publication">Qin, Z., Lee-Kim, S-I., & Qi, H. (in press). The effect of second-language learning experience on Korean listeners’ use of pitch cues in the perception of Cantonese tones. <em>Second Language Research</em>. <a href="https://doi.org/10.1177/02676583241244604">Link</a> [<a href="https://drive.google.com/file/d/1ZPt5FR9MvQVQM0GYkVkuy6fXWV8vG4OH/view">PDF</a>, open access]</li>
+		    <li class="publication">Qin, Z., & Zhang, J. W. (in press). The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study. <em>Linguistics Vanguard</em>. <a href="https://doi.org/10.1515/lingvan-2022-0158">Link</a> [<a href="https://drive.google.com/file/d/1dmptM2dGs8x_eNhV32MK1wYeZLaoo4UK/view">PDF</a>, open access]</li>
+		    <li class="publication">Chui, Y., & Qin, Z. (in press). Distributional learning and overnight consolidation of non-native tonal contrasts by tonal language speakers. <em>Journal of Speech, Language, and Hearing Research</em>. <a href="https://doi.org/10.1044/2024_JSLHR-23-00711">Link</a> [open access]</li>
+		    <li class="publication">Qin, Z., Jin, R., & Zhang, C. (2022). The effects of training variability and pitch aptitude on the overnight consolidation of lexical tones. <em>Journal of Speech, Language, and Hearing Research</em>, 65(9), 3377-3391. <a href="https://doi.org/10.1044/2022_JSLHR-22-00058">Link</a> [<a href="https://drive.google.com/file/d/1ZU6oDle_ABURN11tR21MUtveTiVrn1Cn/view">PDF</a>, open access]</li>
+		    <li class="publication">Qin, Z., & Zhang, J. W. (2022). The use of tonal coarticulation cues in Cantonese spoken word recognition. <em>JASA Express Letters</em>, 2, 035202. <a href="https://doi.org/10.1121/10.0009728">Link</a> [<a href="https://drive.google.com/file/d/1BYkNDOFnDhJeWC7e4hVzMx2V9-iz0xsl/view">PDF</a>, open access]</li>
+		    <li class="publication">Qin, Z. (2022). The second-language productivity of two Mandarin tone sandhi patterns. <em>Speech Communication</em>, 138, 98-109. <a href="https://doi.org/10.1016/j.specom.2022.02.009">Link</a></li>
+		    <li class="publication">Qin, Z., Gong, M., & Zhang, C. (2021). Neural responses in novice learners’ perceptual learning and generalization of lexical tones: The effect of training variability. <em>Brain and Language</em>, 223, 105029. <a href="https://doi.org/10.1016/j.bandl.2021.105029">Link</a></li>
+		    <li class="publication">Qin, Z., Zhang, C., & Wang, W. S-Y. (2021). The effect of Mandarin listeners' musical and pitch aptitude on perceptual learning of Cantonese level-tones. <em>Journal of the Acoustical Society of America</em>, 149, 435-446. <a href="https://doi.org/10.1121/10.0003330">Link</a> [<a href="https://drive.google.com/file/d/1JrdfVC7aNkbXbk8HL4VGo_m92HkWwQyJ/view">PDF</a>, copyright belongs to JASA]</li>
+		    <li class="publication">Qi, H., Qin, Z., & Yan, H. (2020). An empirical study on the productivity of Mandarin tone 3 sandhi by Korean-speaking learners of Chinese. <em>Research on Chinese as a Second Language 对外汉语研究</em>, 21, 168-176. [CSSCI Journal]</li>
+		  </ol>
 		 <hr>
 
 		       
