--- a/media.html
+++ b/media.html
@@ -37,6 +37,12 @@
             font-size: 24px;
             margin-top: 40px; /* Increase spacing above section headings */
             margin-bottom: 20px; /* Increase spacing below section headings */
+            text-align: left; /* Center the heading */
+         }
+	 h3 {
+            font-size: 26px;
+            margin-top: 40px; /* Increase spacing above section headings */
+            margin-bottom: 20px; /* Increase spacing below section headings */
             text-align: center; /* Center the heading */
          }
          .contact-section h4 {
@@ -106,7 +112,7 @@
 		   <h4>Collaborators</h4>
 		   <h5>On Second-language learning of speech prosody</h5>
 			  <ol> 
-			    <li class="publication">Qin, Z., Lee-Kim, S-I., & Qi, H. (in press). The effect of second-language learning experience on Korean listeners’ use of pitch cues in the perception of Cantonese tones. <em>Second Language Research</em>. <a href="https://doi.org/10.1177/02676583241244604">Link</a> [<a href="https://drive.google.com/file/d/1ZPt5FR9MvQVQM0GYkVkuy6fXWV8vG4OH/view">PDF</a>, open access]</li>
+			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea <a href="https://sites.google.com/site/sangimleekim/">Link</a></li>
 			    <li class="publication">Qin, Z., & Zhang, J. W. (in press). The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study. <em>Linguistics Vanguard</em>. <a href="https://doi.org/10.1515/lingvan-2022-0158">Link</a> [<a href="https://drive.google.com/file/d/1dmptM2dGs8x_eNhV32MK1wYeZLaoo4UK/view">PDF</a>, open access]</li>
 			    <li class="publication">Chui, Y., & Qin, Z. (in press). Distributional learning and overnight consolidation of non-native tonal contrasts by tonal language speakers. <em>Journal of Speech, Language, and Hearing Research</em>. <a href="https://doi.org/10.1044/2024_JSLHR-23-00711">Link</a> [open access]</li>
 			    <li class="publication">Qin, Z., Jin, R., & Zhang, C. (2022). The effects of training variability and pitch aptitude on the overnight consolidation of lexical tones. <em>Journal of Speech, Language, and Hearing Research</em>, 65(9), 3377-3391. <a href="https://doi.org/10.1044/2022_JSLHR-22-00058">Link</a> [<a href="https://drive.google.com/file/d/1ZU6oDle_ABURN11tR21MUtveTiVrn1Cn/view">PDF</a>, open access]</li>
