--- a/media.html
+++ b/media.html
@@ -112,9 +112,21 @@
 		   <h4>Collaborators</h4>
 		   <p>On Second-language learning of speech prosody</p>
 			  <ol> 
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
+			    <p>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</p>
+			    <p>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</p>
+			    <p>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</p>
+			  </ol>
+		   <p>On Second-language learning of speech prosody</p>
+			  <ol> 
+			    <p>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</p>
+			    <p>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</p>
+			    <p>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</p>
+			  </ol>
+		   <p>On Second-language learning of speech prosody</p>
+			  <ol> 
+			    <p>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</p>
+			    <p>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</p>
+			    <p>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</p>
 			  </ol>
 		 <hr>
 
