--- a/media.html
+++ b/media.html
@@ -124,25 +124,25 @@
 		   <p><em>On Aging, cognitive, and language learning</em></p>
 			  <ol> 
 			    <li>Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang">Link</a>]</li>
-			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.htm">Link</a>]</li>
+			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html">Link</a>]</li>
 			  </ol>
 		   <h4>Collaborative labs & centers</h4>
 		   <p><em>Internal</em></p>
 			  <ol> 
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
-			    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</li>
-			    <li>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</li>
+			    <li>SHSS Eyetracking Laboratory (Rm 3302) [<a href="https://www.sr-research.com/eyelink-portable-duo/">Link</a>]</li>
+			    <li>Center for Chinese Linguistics (Rm 2388) [<a href="https://ccl.hkust.edu.hk/">Link</a>]</li>
+			    <li>Center for Aging Science [<a href="https://aging.hkust.edu.hk/">Link</a>]</li>
+			    <li>Counseling and Wellness Center [<a href="https://counsel.hkust.edu.hk/">Link</a>]</li>
+			    <li>Institute for Emerging Market Studies [<a href="https://iems.ust.hk/home">Link</a>]</li>
 			  </ol>
-		   <p><em>On Sleep-dependent consolidation of lexical tones</em></p>
+		   <p><em>External</em></p>
 			  <ol> 
-			    <li>Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/">Link</a>]</li>
-			    <li>Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Link</a>]</li>
+			    <li>Research Center for Aging, Language and Care, Tongji University [<a href="https://ageing.tongji.edu.cn/index.html">Link</a>]</li>
+			    <li>Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/">Link</a>]</li>
+			    <li>Social & Cognitive Neuroscience Laboratory, HKU [<a href="https://www.psychology.hku.hk/scnlab/home.html">Link</a>]</li>
+			    <li>Neurocognition of Language, Music and Learning Lab, PolyU [<a href="https://drcczlab.github.io/index.html">Link</a>]</li>
 			  </ol>
-		   <p><em>On Aging, cognitive, and language learning</em></p>
-			  <ol> 
-			    <li>Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang">Link</a>]</li>
-			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.htm">Link</a>]</li>
-			  </ol>
+
 		 <hr>
 
 		       
