--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                   <!-- First Content Block -->
                   <div class="content-with-image">
                       <div class="text-content">
-                          <li><b>Second-language learning of speech prosody</b></li>
-                          <li>
+                          <p><b>Second-language learning of speech prosody</b></p>
+                          <p>
                               It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches, our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs. deSERT) are processed by adult second-language learners who speak different languages as L1.
-                          </li>
-                          <li>
+                          </p>
+                          <p>
                               Mandarin-speaking Students Wanted —> 
                               <a href="" target="_blank">Stress Training Project</a>
-                           </li>
+                           </p>
                       </div>
                       <div class="image-content">
                           <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img theme-img">
