--- a/media.html
+++ b/media.html
@@ -110,24 +110,24 @@
          	 </div>
 		       
 		   <h4>Collaborators</h4>
-		   <li><em>On Second-language learning of speech prosody</em></li>
+		   <p><em>On Second-language learning of speech prosody</em></p>
 			  <ol> 
 			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
 			    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</li>
 			    <li>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</li>
 			  </ol>
-		   <li><em>On Sleep-dependent consolidation of lexical tones</em></li>
+		   <p><em>On Sleep-dependent consolidation of lexical tones</em></p>
 			  <ol> 
 			    <li>Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/">Link</a>]</li>
 			    <li>Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Link</a>]</li>
 			  </ol>
-		   <li><em>On Aging, cognitive, and language learning</em></li>
+		   <p><em>On Aging, cognitive, and language learning</em></p>
 			  <ol> 
 			    <li>Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang">Link</a>]</li>
 			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html">Link</a>]</li>
 			  </ol>
 		   <h4>Collaborative labs & centers</h4>
-		   <li><em>Internal</em></li>
+		   <p><em>Internal</em></p>
 			  <ol> 
 			    <li>SHSS Eyetracking Laboratory (Rm 3302) [<a href="https://www.sr-research.com/eyelink-portable-duo/">Link</a>]</li>
 			    <li>Center for Chinese Linguistics (Rm 2388) [<a href="https://ccl.hkust.edu.hk/">Link</a>]</li>
@@ -135,7 +135,7 @@
 			    <li>Counseling and Wellness Center [<a href="https://counsel.hkust.edu.hk/">Link</a>]</li>
 			    <li>Institute for Emerging Market Studies [<a href="https://iems.ust.hk/home">Link</a>]</li>
 			  </ol>
-		   <li><em>External</em></li>
+		   <p><em>External</em></p>
 			  <ol> 
 			    <li>Research Center for Aging, Language and Care, Tongji University [<a href="https://ageing.tongji.edu.cn/index.html">Link</a>]</li>
 			    <li>Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/">Link</a>]</li>
