--- a/media.html
+++ b/media.html
@@ -156,7 +156,7 @@
    		   <img src="files/Media 1.jpg" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
-   		   <h4><a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">[Mar 2024] 中午食飽睡一睡 醒神活腦記性增</a><a href="https://www.wenweipo.com/a/202403/18/AP65f84357e4b0ad017f0e444a.html"> [Video Link]</a></h4>
+   		   <p><a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">[Mar 2024] 中午食飽睡一睡 醒神活腦記性增</a><a href="https://www.wenweipo.com/a/202403/18/AP65f84357e4b0ad017f0e444a.html"> [Video Link]</a></p>
     		  <i>Hong Kong Wen Wei Po.</i>
     		 </div>
  		 </div>
@@ -164,10 +164,10 @@
 
 		 <div class="row-fluid">
   		  <div class="span3">
-   	 	  <img src="files/Media 2.jpg" alt="media_talk.jpg" />
+   	 	  <img src="files/Media 2.png" alt="media_talk.png" />
   	 	 </div>
    		  <div class="span9">
-   		   <h4><a href="https://v.douyu.com/show/jNBdvn8y8DmME2yw">[Mar 2024] Kangdi Liu's talk on Experimental Procedures for Tone Patterns at the MSL Software Training Course.</a></h4>
+   		   <p><a href="https://v.douyu.com/show/jNBdvn8y8DmME2yw">[Mar 2024] Kangdi Liu's talk on Experimental Procedures for Tone Patterns at the MSL Software Training Course.</a></p>
    		   <i>Elinguistics</i>
     		 </div>
 		 </div>
@@ -175,10 +175,10 @@
 
 		 <div class="row-fluid">
  		   <div class="span3">
-   		   <img src="files/Media 3.jpg" alt="media_workshop.jpg" />
+   		   <img src="files/Media 3.png" alt="media_workshop.png" />
  		   </div>
  		   <div class="span9">
-  		    <h4><a href="https://www.youtube.com/watch?v=9TTqab5WpmY">[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</a></h4>
+  		    <p><a href="https://www.youtube.com/watch?v=9TTqab5WpmY">[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</a></p>
   		    <i>Faculty of Arts and Social Sciences, HKBU​</i>
  		   </div>
 		 </div>
@@ -189,7 +189,7 @@
    		   <img src="files/Media 4.jpg" alt="media_201901_wwp.jpg" />
  		   </div>
   		  <div class="span9">
-   		   <h4><a href="https://cuhk.zoom.us/rec/play/xt5xe7tbxCUZzUi75yzqdQso9agh1Z3IzCMHmwqVccknXaji4wDPkr2M8MaqvL4kBFeEustKoHOysukU.JFs_Biax23-7gGvY?canPlayFromShare=true&from=share_recording_detail&continueMode=true&componentName=rec-play&originRequestUrl=https://cuhk.zoom.us/rec/share/uie6nauk4slNQLRQHTWCIHeeXGwlu0ayhmiDeDKF_3NQQjKwsIx_uqt8F-Sxq54_.V_Uf6MXSenxL7rP8">[Oct 2022] Quentin Qin's talk on how does training variability influence learning and consolidation of lexical tones?</a> (password:9FA^SD5V)</h4>
+   		   <p><a href="https://cuhk.zoom.us/rec/play/xt5xe7tbxCUZzUi75yzqdQso9agh1Z3IzCMHmwqVccknXaji4wDPkr2M8MaqvL4kBFeEustKoHOysukU.JFs_Biax23-7gGvY?canPlayFromShare=true&from=share_recording_detail&continueMode=true&componentName=rec-play&originRequestUrl=https://cuhk.zoom.us/rec/share/uie6nauk4slNQLRQHTWCIHeeXGwlu0ayhmiDeDKF_3NQQjKwsIx_uqt8F-Sxq54_.V_Uf6MXSenxL7rP8">[Oct 2022] Quentin Qin's talk on how does training variability influence learning and consolidation of lexical tones?</a> (password:9FA^SD5V)</p>
     		  <i><a href="https://cuhklpl.github.io/forum.html">Virtual Psycholinguistics Forum</a></i>
    		 </div>
 		 </div>
@@ -200,7 +200,7 @@
    		   <img src="files/Media 5.jpg" alt="media_201710_milestone.jpg" />
  		   </div>
   		  <div class="span9">
-   		   <h4><a href="https://huma.hkust.edu.hk/news/professor-quentin-qins-article-was-nominated-and-recognized-editorial-board-journal-phonetics">[Aug 2021] Quentin Qin’s article was nominated and recognized by the Editorial Board of the Journal of Phonetics.</a></h4>
+   		   <p><a href="https://huma.hkust.edu.hk/news/professor-quentin-qins-article-was-nominated-and-recognized-editorial-board-journal-phonetics">[Aug 2021] Quentin Qin’s article was nominated and recognized by the Editorial Board of the Journal of Phonetics.</a></p>
     		  <i>Division of Humanities, HKUST</i>
    		 </div>
 		 </div>
