--- a/people.html
+++ b/people.html
@@ -304,6 +304,14 @@
          <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
+   <div class="row-fluid">
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</h4>
+         <h4 style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</h4>
+         <h4 style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</h4>
+         <h4 style="text-align: left;">Weijie TAN (Research Assistant,  2019)</h4>
+      </div>
+   </div>
    <hr>
 </section>
 
