--- a/people.html
+++ b/people.html
@@ -305,11 +305,14 @@
       </div>
    </div>
    <div class="row-fluid">
+      <div class="span3">
+         <img src="" alt="/>
+      </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</h4>
-         <h4 style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</h4>
-         <h4 style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</h4>
-         <h4 style="text-align: left;">Weijie TAN (Research Assistant,  2019)</h4>
+         <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
       </div>
    </div>
    <hr>
