--- a/people.html
+++ b/people.html
@@ -304,11 +304,8 @@
          <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
-   <div class="row-fluid">
-      <div class="span3">
-         <img src="" alt="/>
-      </div>
-      <div class="span9 offset">
+   <div class="row-fluid" style="display: flex; justify-content: center;">
+      <div class="span9 offset1" style="text-align: left; max-width: 800px; margin: 0 auto;">
          <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
          <p style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</p>
          <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
