--- a/media.html
+++ b/media.html
@@ -197,7 +197,7 @@
 
 		<div class="row-fluid">
  		   <div class="span3">
-   		   <img src="files/Media 5.jpg" alt="media_201710_milestone.jpg" />
+   		   <img src="files/Media 6.png" alt="media_201710_milestone.png" />
  		   </div>
   		  <div class="span9">
    		   <p><a href="https://huma.hkust.edu.hk/news/professor-quentin-qins-article-was-nominated-and-recognized-editorial-board-journal-phonetics">[Aug 2021] Quentin Qin’s article was nominated and recognized by the Editorial Board of the Journal of Phonetics.</a></p>
