--- a/people.html
+++ b/people.html
@@ -307,8 +307,14 @@
    <hr>
    <div class="row-fluid" style="display: flex; justify-content: center;">
       <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+   </div>     
+   <div class="row-fluid" style="display: flex; justify-content: center;">
       <p style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</p>
+   </div>     
+   <div class="row-fluid" style="display: flex; justify-content: center;">
       <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
+   </div>     
+   <div class="row-fluid" style="display: flex; justify-content: center;">
       <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
    </div>
    <hr>
