--- a/people.html
+++ b/people.html
@@ -305,17 +305,44 @@
       </div>
    </div>
    <hr>
-   <div class="row-fluid" style="display: flex; justify-content: center;">
-      <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+   <div class="row-fluid">
+      <div class="span3">
+         <!-- Placeholder for consistency -->
+         <div style="width: 100px; height: 100px;"></div>
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</h4>
+      </div>
    </div>     
-   <div class="row-fluid" style="display: flex; justify-content: center;">
-      <p style="text-align: left;">Martin,Yu Ting LEE (RPG Research Assistant, 2021)</p>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <!-- Placeholder for consistency -->
+         <div style="width: 100px; height: 100px;"></div>
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</h4>
+      </div>
    </div>     
-   <div class="row-fluid" style="display: flex; justify-content: center;">
-      <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <!-- Placeholder for consistency -->
+         <div style="width: 100px; height: 100px;"></div>
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</h4>
+      </div>
    </div>     
-   <div class="row-fluid" style="display: flex; justify-content: center;">
-      <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <!-- Placeholder for consistency -->
+         <div style="width: 100px; height: 100px;"></div>
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Weijie TAN (Research Assistant,  2019)</h4>
+      </div>
    </div>
    <hr>
 </section>
