--- a/people.html
+++ b/people.html
@@ -311,7 +311,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</h4>
+         <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
       </div>
    </div>     
    <hr>
@@ -321,7 +321,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</h4>
+         <p style="text-align: left;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
       </div>
    </div>     
    <hr>
@@ -331,7 +331,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</h4>
+         <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
       </div>
    </div>     
    <hr>
@@ -341,7 +341,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Weijie TAN (Research Assistant,  2019)</h4>
+         <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
       </div>
    </div>
    <hr>
