--- a/people.html
+++ b/people.html
@@ -335,7 +335,7 @@
    <div class="row-fluid">
       <div class="span3">
          <!-- Placeholder for consistency -->
-         <div style="width: 100px; height: 100px;"></div>
+         <div style="width: auto; height: auto;"></div>
       </div>
       <div class="span9 offset">
          <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
