--- a/people.html
+++ b/people.html
@@ -338,7 +338,7 @@
          <div style="width: auto; height: auto;"></div>
       </div>
       <div class="span9 offset">
-         <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
+         <p style="text-align: left; margin: 0;">Weijie TAN (Research Assistant,  2019)</p>
       </div>
    </div>
    <hr>
