--- a/people.html
+++ b/people.html
@@ -311,7 +311,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left;margin: 0;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
       </div>
    </div>     
    <div class="row-fluid">
@@ -320,7 +320,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <p style="text-align: left;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left;margin: 0;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
       </div>
    </div>     
    <div class="row-fluid">
@@ -329,7 +329,7 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left;margin: 0;">Minzhi GONG (Research Assistant,  2020)</p>
       </div>
    </div>     
    <div class="row-fluid">
