--- a/people.html
+++ b/people.html
@@ -311,10 +311,10 @@
          <div style="width: 100px; height: 100px;"></div>
       </div>
       <div class="span9 offset">
-         <p style="text-align: left;">Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
-         <p style="text-align: left;">Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
-         <p style="text-align: left;">Minzhi GONG (Research Assistant,  2020)</p>
-         <p style="text-align: left;">Weijie TAN (Research Assistant,  2019)</p>
+         <p style="text-align: left;">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left;">· Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left;">· Weijie TAN (Research Assistant,  2019)</p>
       </div>
    </div>
    <hr>
