--- a/people.html
+++ b/people.html
@@ -98,7 +98,7 @@
 <div class="container" style="max-width: 1200px; margin: 0 auto;">
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
-<div class="container" style="max-width: 1200px; margin: 0 auto;">
+<div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
 
    <!-- 轮播图 -->
    <div class="row-fluid">
