--- a/people.html
+++ b/people.html
@@ -287,7 +287,7 @@
    </div>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN"/>
+         <img src="thumbs/Photo_Cindy.png" style="width:80%; height:80%;" alt="Cindy, Rui JIN"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
@@ -297,7 +297,7 @@
    <hr>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
