--- a/facilities.html
+++ b/facilities.html
@@ -133,20 +133,20 @@
             <div class="span12">
                <div class="img-1">
                  <div style="display: flex; justify-content: space-between;">
-                    <div style="flex: 1;">
+                    <div style="flex: 1;padding: 0 15px;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
                            <p>Main testing station</p>
                         </div>
                     </div>
-                    <div style="flex: 1;">
+                    <div style="flex: 1;padding: 0 15px;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
                            <p>EEG Station
 				<br>▪ Neuroscan EEG system (64CH)</p>
                         </div>
                     </div>
-		    <div style="flex: 1;">
+		    <div style="flex: 1;padding: 0 15px;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
                            <p>Eye-tracking room
