--- a/facilities.html
+++ b/facilities.html
@@ -136,20 +136,20 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p>Main testing station</p>
+                           <p style="text-align: left;margin-top: 5px;">Main testing station</p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p>EEG Station
+                           <p style="margin-top: 5px;">EEG Station
 				<br>▪ Neuroscan EEG system (64CH)</p>
                         </div>
                     </div>
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p>Eye-tracking room
+                           <p style="margin-top: 5px;">Eye-tracking room
 				<br>▪ Eyelink Portable Duo (Rm 3302)</p>
                         </div>
                     </div>
