--- a/facilities.html
+++ b/facilities.html
@@ -184,7 +184,7 @@
    		   }
  		   .parallel-text p {
      		   width: 45%; /* 调整宽度以适应布局需求 */
-   	           text-align: justify;
+   	           text-align: left;
   		   }
 
 		</style>
@@ -211,11 +211,13 @@
 				<br>▪ 1 <a href="https://www.grason-stadler.com/products/audiometers/gsi-audiostar-pro?keyword=gsi%20audiometer%20price&matchtype=b&sncid=13&utm_source=google&utm_medium=cpc&utm_campaign=brand_product_specific&adgroup=audiostar%20pro&gclid=CjwKCAjwzY2bBhB6EiwAPpUpZkeP7sbYVJ1pv71uB97lG9wQIlCzWY4ZbuepqVSg3AaU3srNVE6NehoCBUYQAvD_BwE" target="_blank">Clinical Audiometer (GSI 18 model of Grason-Stadler)</a>
 				<br>▪ 1 <a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a>
 				<br>▪ 1 laptop computer
-				<br>▪ 1 computer projector</p>
+				<br>▪ 1 computer projector
+			  </p>
  		          <p>▪ Presentation: <a href="https://pstnet.com/products/e-prime/" target="_blank">E-Prime 3.0</a>, <a href="https://www.paradigmexperiments.com/" target="_blank">Paradigm</a>, <a href="https://www.psychopy.org/" target="_blank">PsychoPy</a>​, Matlab
 				<br>▪ Data analysis: <a href="https://www.ibm.com/spss" target="_blank">SPSS</a>​, R, Matlab, Python
 				<br>▪ Speech: <a href="https://www.fon.hum.uva.nl/praat/" target="_blank">Praat</a>
-				<br>▪ General: Google drive, Microsoft Office</p>
+				<br>▪ General: Google drive, Microsoft Office
+			  </p>
 		    </div>
 	       </body>
 <hr>
