--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                           </p>
                           <p>
                               Mandarin-speaking Students Wanted —> 
-                              <a href="" target="_blank">Stress Training Project</a>
+                              <a href="files/Eye-tracking_Poster_updated.pdf" target="_blank">Stress Training Project</a>
                            </p>
                       </div>
                       <div class="image-content">
