--- a/people.html
+++ b/people.html
@@ -21,6 +21,7 @@
          }
          body {
             background-color: white;
+	         font-family: 'Montserrat', sans-serif;
          }
          .responsive-img {
             width: 100%;
